# vectorImage

./: CMakeLists.txt  check.cxx  image2vector.cxx  itkImageToVectorImageFilter.h  itkImageToVectorImageFilter.txx  itkVectorImageToImageFilter.h  itkVectorImageToImageFilter.txx  vector2image.cxx
images/: ctheadx.nrrd  ctheadx.tif
